# hulk

./: Cargo.toml
crates/calibration/: Cargo.toml
crates/calibration/src/: lib.rs  lines.rs  measurement.rs
crates/calibration/src/circles/: circle_fitting_model.rs  circle_ransac.rs  mod.rs
crates/control/src/: camera_calibration_controller.rs  lib.rs  penalty_shot_direction_estimation.rs
crates/control/src/behavior/: jump.rs  node.rs  (+1 more)
crates/hulk/: Cargo.toml  build.rs
crates/ransac/src/: lib.rs
crates/types/src/: motion_command.rs  parameters.rs
crates/vision/: Cargo.toml
crates/vision/src/: calibration_line_detection.rs  camera_calibration_capture_provider.rs  field_border_detection.rs  lib.rs  ransac.rs
etc/parameters/: default.json  head.P0000074A03S85B00016.json  head.P0000074A04S8CP00040.json  head.P0000074A04S8CP00056.json  head.P0000074A06S9A900031.json  head.P0000074A09S31T00003.json
measurements/: 1687710941.json  1687710951.json  1687710956.json  1687710962.json  1687710967.json  1687710972.json  1687710980.json  1687710994.json  1687710998.json  1687711002.json  1687711014.json  1687711031.json  1687711043.json  1687711049.json  1687711056.json  1687711060.json  1687711073.json  1687711080.json  1687711086.json  1687711099.json  1687711103.json  1687711110.json  1687711116.json  1687711120.json  1687711124.json  1687711133.json  1687711147.json  1687711151.json  1687711173.json  1687711188.json  1687711194.json  1687711199.json  1687711203.json  1687711223.json  1687711229.json
tools/twix/: Cargo.toml
tools/twix/src/: main.rs
(+11 files in other folders)
