[package]
name = "calibration"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[dependencies]
image = { workspace = true }
imageproc = { workspace = true }
itertools = { workspace = true }
levenberg-marquardt = { workspace = true }
nalgebra = { workspace = true }
projection = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serialize_hierarchy = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
